[package]
name = "blockchain-demo"
version = "0.1.0"
authors = ["yunwei <1067852565@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha2 = "0.9"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
serde = {version ="1.0", features =["derive"]}
log = "0.4"
env_logger = "0.7.1"
clap = "~2.33"
bitcoincash-addr = "0.5.2"
rand = "0.4.6"
merkle-cbt = "0.2.2"
