[package]
name = "blockchain-demo"
version = "0.1.0"
authors = ["yunwei37 <1067852565@qq.com>"]
description = "A simplified blockchain implementation in rust for leaning"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/yunwei37/blockchain-rust"
repository = "https://github.com/yunwei37/blockchain-rust"
license = "MIT"
keywords = ["blockchain", "demo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha2 = "0.9"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
serde = {version ="1.0", features =["derive"]}
log = "0.4"
env_logger = "0.7.1"
clap = "~2.33"
bitcoincash-addr = "0.5.2"
rand = "0.4.6"
merkle-cbt = "0.2.2"
